# zebar

./: .editorconfig  .eslintrc.cjs  .eslintrc.js  .gitattributes  .gitignore  .prettierignore  .prettierrc  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  MARKETPLACE.md  README.md  base-tsconfig.json  bun.lockb  new_network_config_example.yaml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml  turbo.json  zebar_config_example.yaml
.cargo/: config.toml
.github/workflows/: build.yaml  ci.yaml  lint-check.yaml  pr-title-check.yaml  publish-crate.yaml  release.yaml
apps/client-api/: README.md  package.json
apps/client-api/src/: index.ts
apps/client-api/src/desktop/: use-current-monitor.hook.ts
apps/client-api/src/providers/active-window/: use-active-window-provider.hook.ts
apps/client-api/src/providers/glazewm/: use-glazewm-provider.hook.ts
apps/client-api/src/providers/ip/: ip-info-api-response.model.ts
apps/client-api/src/providers/memory/: use-memory-provider.hook.ts
apps/client-api/src/providers/weather/: use-weather-provider.hook.ts
apps/client-api/src/template-engine/types/: interpolation-node.model.ts  switch-statement-node.model.ts  text-node.model.ts
apps/client-api/src/template-engine/utils/: parse-tokens.ts
apps/client-api/src/templates/: glazewm-workspaces.template.html  index.ts  weather.template.html
apps/client-api/src/user-config/: use-config-variables.hook.ts  use-style-builder.hook.ts  use-user-config.hook.ts
apps/client-api/src/user-config/types/: global-config.model.ts  user-config.model.ts
apps/client-api/src/user-config/types/bar/: base-element-config.model.ts  group-config.model.ts  providers-config.model.ts
apps/client-api/src/user-config/types/shared/: boolean-like.model.ts  with-dynamic-key.ts
apps/client-api/src/user-config/utils/: create-config-store.ts
apps/client-api/src/utils/: is-object.ts  memoize.ts
apps/client-api/src/utils/types/: non-nullable-array.ts
apps/client/src/app/bar/: bar.component.tsx
apps/desktop/: Cargo.toml  package.json  rustfmt.toml  tauri.conf.json
apps/desktop/resources/: sample-config.yaml
apps/desktop/src/: main.rs  user_config.rs
apps/frontend/: index.html  package.json  tsconfig.json  vite.config.ts
apps/frontend/src/: index.scss  index.ts  index.tsx  shims.d.ts
apps/frontend/src/app/: app.component.ts  app.component.tsx  app.module.scss
apps/frontend/src/app/bar/: bar-component.component.ts  bar-group.component.tsx  bar.component.tsx  bar.njk  bar.scss  bar.ts  bar.tsx
apps/frontend/src/app/bar-group/: bar-group.tsx
apps/frontend/src/app/bar/templates/: glazewm-workspaces.template.njk  weather.template.njk
apps/frontend/src/app/component-group/: component-group.njk  component-group.tsx
apps/frontend/src/app/components/battery/: battery-component.tsx
apps/frontend/src/app/components/clock/: clock-component.njk  clock-component.tsx
apps/frontend/src/app/components/cpu/: cpu-component.ts  cpu-component.tsx
apps/frontend/src/app/components/custom/: custom-component.ts  custom-component.tsx
apps/frontend/src/app/components/glazewm/: glazewm-component.njk  glazewm-component.ts  glazewm-component.tsx
apps/frontend/src/app/container/: container.component.tsx
apps/frontend/src/app/group/: group.njk  group.ts  group.tsx
apps/frontend/src/app/shared/: use-config.hook.ts  use-desktop-commands.hook.ts
crates/komorebi-util/: Cargo.toml
crates/komorebi-util/examples/: async.rs  sync.rs
crates/komorebi-util/src/: client.rs  error.rs  lib.rs  types.rs
crates/shell/: Cargo.toml
crates/shell-util/: Cargo.toml
crates/shell-util/src/: error.rs  lib.rs  options.rs  shell.rs  stdout_reader.rs
crates/shell/src/: error.rs  lib.rs  options.rs  shell.rs  stdout_reader.rs
crates/systray-util/: Cargo.toml  README.md
crates/systray-util/examples/: async.rs  sync.rs
crates/systray-util/src/: error.rs  lib.rs  main.rs  systray.rs  tray.rs  tray_spy.rs  util.rs  window.rs
crates/z-shell/: Cargo.toml
crates/z-shell/src/: commands.rs  encoding.rs  error.rs  lib.rs  options.rs  process.rs  shell.rs
examples/boilerplate-react-buildless/: example.zebar.json  index.html
examples/boilerplate-solid-ts/: README.md  example.zebar.json  index.html  package.json
examples/boilerplate-solid-ts/src/: index.css  index.tsx
examples/boilerplates/react-buildless/: index.html  my-window.zebar.json
examples/boilerplates/solid-ts/: index.html  my-window.zebar.json  vite.config.ts
examples/boilerplates/solid-ts/src/: index.tsx
examples/macos/: .gitignore  README.md  index.html  macos.zebar.json  package-lock.json  package.json  vite.config.ts
examples/macos/src/: index.css  index.tsx
examples/macos/src/WindowInfoLibrary/: Class1.cs  WindowInfoLibrary.csproj  build.bat  checkDLL.sh
examples/react-buildless/: index.html
examples/solidjs-buildless/: index.html  my-window.zebar.json
examples/solidjs-ts/: my-window.zebar.json  package.json  vite.config.ts
examples/solidjs-ts/src/: App.tsx  App2.tsx  index.tsx
examples/starter/: styles.css  vanilla.html  vanilla.zebar.json  with-glazewm.html  with-glazewm.zebar.json  with-komorebi.html  with-komorebi.zebar.json
resources/: settings-schema.json  widget-schema.json  zpack-schema.json
resources/starter/: README.md  styles.css  vanilla.html  with-glazewm.html  with-komorebi.html  zpack.json
resources/templates/pack-template/: README.md.tera  zpack.json.tera
resources/templates/widget-templates/react-buildless/: README.md.tera  index.html
resources/templates/widget-templates/solid-ts/: README.md.tera  package.json.tera
templates/__base__/: README.md  zebar-pack.json
templates/__base__/.github/workflows/: zebar-publish.yaml
templates/pack-template/: zebar-pack.json.tera  zpack.json.tera
templates/pack-template/.github/workflows/: zebar-publish.yaml.tera
templates/widget-templates/react-buildless/: index.html  zebar-widget.json.tera  {{WIDGET_NAME}}.zwidget.json.tera
templates/widget-templates/solid-ts/: package.json.tera  zebar-widget.json.tera
(+147 files in other folders)
