[workspace]
resolver = "2"
members = ["packages/desktop", "crates/*"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
thiserror = "2"
windows-core = "0.58"
windows = { version = "0.58", features = [
  "Foundation",
  "Foundation_Collections",
  "implement",
  "Media_Control",
  "Win32_Devices_FunctionDiscovery",
  "Win32_Globalization",
  "Win32_Graphics_Gdi",
  "Win32_Media",
  "Win32_Media_Audio",
  "Win32_Media_Audio_Endpoints",
  "Win32_System_Console",
  "Win32_System_DataExchange",
  "Win32_System_SystemServices",
  "Win32_System_Threading",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_Shell_PropertiesSystem",
  "Win32_UI_TextServices",
  "Win32_UI_WindowsAndMessaging",
  "Win32_NetworkManagement_WiFi",
] }
