[package]
name = "shell-util"
version = "0.0.0"
authors = ["Glzr Software Pte. Ltd."]
description = "A cross-platform library for executing shell commands."
license = "MIT"
repository = "https://github.com/glzr-io/zebar"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
shared_child = "1"
regex = "1"
encoding_rs = "0.8"
os_pipe = "1"
