[package]
name = "systray-util"
version = "0.0.0"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows-core = { workspace = true }
windows = { workspace = true }
